gcc/testsuite/g++.dg/ext/is_class_error3.C
struct A {};
void *p = __is_class (A);	// { dg-error "11:cannot convert" }
